# data-propagate

./: .gitignore  LICENSE  README.md  circle.yml  data-propagate.cabal  stack.yaml
src/Data/: Propagate.hs
src/Data/Propagate/: IsList.hs
test/Data/: PropagateSpec.hs
test/Usage/: ExamplesSpec.hs
