name:                data-propagate
version:             0.1.0.0
synopsis:            A naive implementation of a propagator
description:         Please see README.md
homepage:            https://github.com/ptek/data-propagate#readme
license:             BSD3
license-file:        LICENSE
author:              Pavlo Kerestey
maintainer:          pavlo <at> kerestey [dot] net
copyright:           2016 Pavlo Kerestey
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O
  exposed-modules:     Data.Propagate
                     , Data.Propagate.IsList
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , time

test-suite data-propagate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , data-propagate
                     , hspec
                     , QuickCheck
  ghc-options:         -fno-warn-type-defaults -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ptek/data-propagate
